results/SpecGenBench/conversational/log-CanWinNim-2023_07_09_23_15_30.txt
class CanWinNim {
    /*@ public normal_behavior
      @    requires 0 < n && n <= Integer.MAX_VALUE;
      @    ensures \result <==> n % 4 != 0;
      @    pure function @*/
    public boolean canWinNim(int n) {
        return n % 4 != 0;
    }
}
/home/max/Documents/JMLGPT/tmp/CanWinNim.java:5: error: Expected an identifier, found end of JML comment instead
      @    pure function @*/
                         ^
/home/max/Documents/JMLGPT/tmp/CanWinNim.java:5: error: ';' expected
      @    pure function @*/
                            ^
2 errors

class CanWinNim {
    /*@ public normal_behavior
      @    requires 0 < n && n <= Integer.MAX_VALUE;
      @    ensures \result <==> n % 4 != 0;
      @    pure @*/
    public boolean canWinNim(int n) {
        return n % 4 != 0;
    }
}

